--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
